Fix to horizontal scroll issue

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -14,7 +14,7 @@ h1 {
 
 h2 {
     font-size: 36px;
-    margin: 32px 0 16px 0;
+    margin: 24px 0 16px 0;
 }
 
 h3 {
@@ -49,6 +49,7 @@ header {
     height: 64px;
     padding: 0 24px;
     display: flex;
+    width: 100%;
 }
 
 .small-nav {
@@ -289,7 +290,7 @@ header {
 
 @media only screen and (min-width: 940px) {
     #thesis {
-        padding: 0 16px 24px 16px;
+        padding: 32px 24px;
     }
     
     #thesis-content {
@@ -310,7 +311,6 @@ header {
 
     #thesis-tiles {
         border-left: 1px solid lightgrey;
-        padding: 24px;
     }
 
     video {
